...
  _bowlHardStruck,
  _bowlLowAndLong,
];

const _twentyMinuteTimer = MeditationTimerPreset(
  id: 'timer-20-minutes',
  name: 'Quick 20 minutes',
  duration: Duration(minutes: 20),
  startingBell: _bellVeryLong,
  endingBell: _bowlLowAndLong,
);

const _infiniteTimer = MeditationTimerPreset(
...
